# GTestDemo

./: CMakeLists.txt  README.md  code_coverage.sh  main.cpp
src/: CMakeLists.txt
src/utils/: Function.cpp  Function.h
test/: CMakeLists.txt
